WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
228878
CrashTracer: com.apple.WebKit.WebContent at com.apple.WebCore: WebCore::CryptoKeyRSA::exportJwk const
https://bugs.webkit.org/show_bug.cgi?id=228878
Summary
CrashTracer: com.apple.WebKit.WebContent at com.apple.WebCore: WebCore::Crypt...
Kate Cheney
Reported
2021-08-06 14:59:28 PDT
CrashTracer: com.apple.WebKit.WebContent at com.apple.WebCore: WebCore::CryptoKeyRSA::exportJwk const
Attachments
Patch
(1.46 KB, patch)
2021-08-06 15:01 PDT
,
Kate Cheney
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kate Cheney
Comment 1
2021-08-06 15:01:19 PDT
Created
attachment 435093
[details]
Patch
Kate Cheney
Comment 2
2021-08-06 15:01:30 PDT
rdar://60147231
Brent Fulgham
Comment 3
2021-08-06 17:32:18 PDT
Comment on
attachment 435093
[details]
Patch R=me
Brent Fulgham
Comment 4
2021-08-06 17:33:58 PDT
Comment on
attachment 435093
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=435093&action=review
> Source/WebCore/crypto/keys/CryptoKeyRSA.cpp:143 > + return result;
Should we log anything here? I assume JsonWebKey initialized these values appropriately?
Kate Cheney
Comment 5
2021-08-06 17:47:33 PDT
Comment on
attachment 435093
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=435093&action=review
>> Source/WebCore/crypto/keys/CryptoKeyRSA.cpp:143 >> + return result; > > Should we log anything here? I assume JsonWebKey initialized these values appropriately?
The exportData() function logs anytime it returns nullptr, so I think extra logging here would be unnecessary. It probably is a good idea to investigate why CCRSAGetKeyComponents is failing sometimes and causing rsaComponents to be null, though.
EWS
Comment 6
2021-08-06 18:16:36 PDT
Committed
r280747
(
240333@main
): <
https://commits.webkit.org/240333@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 435093
[details]
.
Kate Cheney
Comment 7
2021-08-06 20:04:42 PDT
Layout test failures are in web animations and seem super unrelated.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug