CrashTracer: com.apple.WebKit.WebContent at com.apple.WebCore: WebCore::CryptoKeyRSA::exportJwk const https://bugs.webkit.org/show_bug.cgi?id=228878 <rdar://problem/60147231>

Reviewed by Brent Fulgham.

exportData() could return nullptr. We should check the value of
rsaComponents before trying to use it.

* crypto/keys/CryptoKeyRSA.cpp:
(WebCore::CryptoKeyRSA::exportJwk const):


Canonical link: https://commits.webkit.org/240333@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280747 268f45cc-cd09-0410-ab3c-d52691b4dbfc